# ez2pay_services

./: Cargo.toml  accounts.db  products.db
src/: lib.rs  main.rs  mutations.rs  queries.rs  query_dsl.rs  types.rs
src/graphql/: schema.graphql  types.graphql
src/snapshots/: ez2paylib__test__findAccountByPhoneTest.snap  ez2paylib__test__new_account_by_phone_test.snap
