[package]
name = "ez2pay"
version = "0.1.0"
authors = ["rodzilla <rolandrodriguez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="ez2paylib"
path="src/lib.rs"

[[bin]]
name="ez2pay"
path="src/main.rs"

[dependencies]
actix-web = "3"
serde = "1.0.124"
serde_json = "1"
clap = "3.0.0-beta.2"
log = "0.4.0"
env_logger = "0.8.2"
cynic = { version = "0.12.1", features = ["surf"] }
cynic-codegen = "0.12.2"
surf = "2.0.0"
insta = "1.7.0"
twilio = "1.0.0"
dotenv = "0.15.0"
harsh = "0.2.1"
futures = "0.3"
otpauth = "0.3"
rusty-money = "0.4.1"
async-stripe = { git = "https://github.com/arlyon/async-stripe.git", branch = "master", features = ["runtime-async-std-surf"]  }
actix-cors = "0.5.4"
